Accepted in PRD

--- a/macro_paper.tex
+++ b/macro_paper.tex
@@ -78,7 +78,9 @@
 %%height=10in,a5paper,hmargin={3cm,0.8in},
 %]{geometry}
 
-\newcommand{\vtwo}[1]{{\color{red} #1}}
+\newcommand{\vtwo}[1]{{\color{black} #1}}
+\newcommand{\vthree}[1]{{\color{black} #1}}
+\newcommand{\vfour}[1]{{\color{red} #1}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                 SETTINGS
@@ -129,13 +131,16 @@ Cleveland, Ohio 44106-7079, USA}
 \section{Introduction} % (fold)
 \label{sec:introduction}
 
-    Assuming General Relativity is the correct theory of gravity on all scales, there is considerable evidence for dark matter \vtwo{\citep{Tanabashi2018}}. \vtwo{Despite detailed searches, dark matter has yet to be found at small cross-sections and so we consider larger cross-sections and also larger masses.} Macroscopic dark matter (macros) is a broad class of dark-matter candidates that represents an alternative to conventional particle dark matter with wide ranges of masses $M_x$ and \vtwo{geometric} cross sections $\sigma_x$ that could still provide all of the dark matter \vtwo{\citep{jacobs2015macro}}. Macros typically refer to a family of composite dark matter models arising from some early-universe phase transition, often composed of strange quark matter.
+    Assuming General Relativity is the correct theory of gravity on all scales, there is considerable evidence for dark matter \vtwo{\citep{Tanabashi2018}}. \vtwo{Despite detailed searches, dark matter has yet to be found at small cross-sections and so we consider larger cross-sections and also larger masses.}
+   \vthree{Contrary to widespread misconception, dark matter need not have a small cross-section.  The important quantity is $\sigma/m$ -- the ratio of the interaction cross-section of the dark matter (with itself, with baryons, with photons, ...) to the mass of the dark matter candidate.  WIMP dark-matter candidates would achieve a low $\sigma/m$ with a small $\sigma$; primordial black holes would achieve it with a large $m$.}
+    Macroscopic dark matter (macros) is a broad class of dark-matter candidates that represents an alternative to conventional particle dark matter with wide ranges of masses $M_x$ and \vthree{large} cross sections $\sigma_x$ that could still provide all of the dark matter \vtwo{\citep{jacobs2015macro}}.
 
-    Of particular interest would be macros of approximately nuclear density \vtwo{satisfying the geometric cross section (\ref{app:cross_sections})}
+    Macros typically refer to a family of composite dark matter models arising from some early-universe phase transition, often composed of strange quark matter. Of particular interest would be macros of approximately nuclear density \vtwo{satisfying the geometric cross section (\ref{app:cross_sections})}
     \begin{equation}\label{eq:macro_density}
         \sigma_x \approx 2\times 10^{-10} \left(\frac{M_x}{g}\right)^{\frac{2}{3}} [\rm{cm}^2]\,,
     \end{equation}
     as several models for macros describe potential candidates with approximately that density \vtwo{\citep{Sidhu2020reconsider}}. The idea that macros could be formed entirely within the Standard Model was originally proposed by \vtwo{\citet{Witten1984}} in the context of a first-order QCD phase transition. \vtwo{Though subsequent calculations show this specific mechanism to be unlikely, many other possible mechanisms have been identified. For instance, \citep{Lynn1990, Lynn2010} described a more realistic model for Standard-Model macros as bound states of nucleons with significant strangeness}. Nelson \vtwo{\citep{Nelson1990iu}} studied the formation of nuggets of strange-baryon matter during a second QCD phase transition -- from a kaon-condensate phase to the ordinary phase. Others have considered non-Standard-Model versions of such objects and their formation \vtwo{\citep{Zhitnitsky2003}}.
+    \vthree{In all such models, the interaction cross-section of a macro with another macro, and with baryons, electrons, or photons, is approximately equal to the geometric cross-section.  We adopt this equality as our working hypothesis.}
 
     Some of us, working with colleagues, have recently explored which regions of macro parameter space remain unprobed \vtwo{\citep{jacobs2015macro, jacobs2015resonant, Sidhu2019death, Sidhu2019bolide, Sidhu2020reconsider}}. A longstanding constraint comes from examination of a slab of ancient mica for tracks that would have been left by the passage of a macro moving at the typical speed of dark matter in the Galaxy. This was used to rule out macros of $M_x \leq 55\,$g for a wide range of \vtwo{geometric} cross sections (see \vtwo{\citet{Price1988ge, DeRujula1984axn, jacobs2015macro}}). Various microlensing experiments have constrained the dark-matter fraction  for masses $M_x \geq 10^{23}\,$g \vtwo{\citep{Alcock2001, Griest2013, Tisserand2007, Carr2010, Niikura2019}}. \citeauthor{Wilkinson2014angular} \vtwo{\citep{Wilkinson2014angular}} utilized the full Boltzmann formalism to obtain constraints from macro-photon elastic scattering using the first year release of Planck data. More recently, the existence of massive white dwarfs was used to constrain a significant region of macro parameter space \vtwo{\citep{Graham2018}} (as revisited and extended by \vtwo{\citet{Sidhu2020reconsider}}). The region of parameter space for which macros produce injuries similar to a gunshot wound was recently constrained by historical analysis of a well-monitored segment of the population \vtwo{\citep{Sidhu2019death}}.
 
@@ -170,19 +175,20 @@ Cleveland, Ohio 44106-7079, USA}
 \section{A Lightning Review} % (fold)
 \label{sec:a_lightning_review}
 
-    While the detailed physics of lightning remains a matter of investigation, the broad strokes are well understood. Lightning is an electrical discharge between two regions of large potential difference. Lightning is classified by the start-end point pair, and sub-classified by the order and charges of those points. For instance, the main classes of lightning are intra-cloud, inter-cloud, cloud-air, and cloud-ground. All except cloud-air lightning may occur in reverse order, like ground-to-cloud or cloud-to-ground. We restrict ourselves to cloud-ground strikes, which are the easiest to observe. The description that follows is almost entirely drawn from the excellent review by Dwyer and Uman \vtwo{\citep{DwyerUman2014}}.
+    While the detailed physics of lightning remains a matter of investigation, the broad strokes are well understood. Lightning is an electrical discharge between two regions of large potential difference. Lightning \vfour{strikes can be} classified by the start-end point pair, and sub-classified by the order and charges of those points. For instance, the main classes of lightning are intra-cloud, inter-cloud, cloud-air, and cloud-ground. All except cloud-air lightning may occur in reverse order, like ground-to-cloud or cloud-to-ground. We restrict ourselves to cloud-ground strikes, which are the easiest to observe. The description that follows is almost entirely drawn from the excellent review by Dwyer and Uman \vtwo{\citep{DwyerUman2014}}, \vfour{which should be consulted if a more detailed review of the basic physics is desired}.
 
-    A lightning strike is actually two events: first, an ion channel is created from point A to point B, and second, energy flows from B to A. The latter is the lightning and is the luminous signal of the former. The creation of the ion channel is a discrete stochastic process of the formation of ``stepped leaders," where a cylindrical atmospheric volume -- ``step" -- is ionized. This process is known to take at most $1 \; \mu\rm{s}$. These steps are short compared to the cloud-ground distance -- cloud-level steps are just $\sim10 \rm{m}$, while ground-level steps near $50 m$. The \vtwo{interstep} interval ranges from $\sim50 \mu\rm{s}$ at cloud-level to $\sim10 \mu\rm{s}$ at ground. The ion channel persists long after the leader takes its next ``step". 
+    A lightning strike is actually two events: first, an ion channel is created from point A to point B, and second, energy flows from B to A. The latter is \vfour{what is actually observed as ``lightning," and} is the luminous signal of the former. The creation of the ion channel under ordinary conditions is a discrete stochastic process of the formation of ``stepped leaders," where a cylindrical atmospheric volume -- ``step" -- is ionized. \vfour{Each of these steps creates one straight segment of the total jagged lightning bolt. Each step is estimated} to take at most $1 \; \mu\rm{s}$. These steps are short compared to the cloud-ground distance -- cloud-level steps are just $\sim10 \rm{m}$, while ground-level steps near $50 m$. The \vtwo{interstep} interval ranges from $\sim50 \mu\rm{s}$ at cloud-level to $\sim10 \mu\rm{s}$ at ground. \vfour{Crucially, the leader} persists long after \vfour{it} takes its next ``step". \vfour{In other words, the path of an organic lightning strike is formed in a series of discrete steps, creating a long but jagged ionized trail that dictates the shape of the resulting lightning strike.}
 
-    The propagation direction and charge type of the leader determines the lightning sub-class. For cloud-ground strikes there are four varieties: downward / upward - negative / positive. Thunder clouds are negatively charged at the bottom and positively charged on top. Flat ground has regions of differently signed net charge. \vtwo{In a downward-positive strike a positive leader starts near cloud top and steps down to a negatively charged region of ground, a few km below.} For all cloud-ground strikes the full channel creation process takes approximately $20$ ms.
+    The propagation direction and charge type of the leader determines the lightning sub-class. For cloud-ground strikes there are four varieties: downward / upward - negative / positive. Thunder clouds are \vfour{typically} negatively charged at the bottom and positively charged on top. Flat ground has regions of differently signed net charge. \vtwo{In a downward-positive strike a positive leader starts near cloud top and steps down to a negatively charged region of ground, a few km below.} For all cloud-ground strikes the full channel creation process takes approximately $20$ ms.
 
-    The typical stepped leader has 5 Coulombs of free electrical charge, or $\sim10^{-3} \, \rm{C/m}$. While the leader has a luminous diameter between 1 and 10 m, it is thought to have a conducting core of plasma a few centimeters in diameter. This core acts as a conducting channel, and it is through it that much of the energy flows.
+    The typical stepped leader has 5 Coulombs of free electrical charge, or $\sim10^{-3} \, \rm{C/m}$. While the leader has a luminous diameter between 1 and 10 m, it is thought to have a conducting core of plasma a few centimeters in diameter. This core acts as a conducting channel, and it is through it that much of the energy flows. \vfour{Therefore, if a similar quantity of atmospheric charge were to be liberated by other means along a channel of similar dimensions, the resulting ion trail could allow current to flow. This could serve as the basis for a new lightning strike, assuming the trail was created in a region with a sufficient potential difference between connected regions.}
     
     
     \subsection*{Why Lightning is Jagged} % (fold)
     \label{sub:why_lightning_is_jagged}
 
-        \vtwo{Assuming each step in the stepped-leader process has a random azimuthal angle, the probability that for every one of N steps the direction is within $\theta$ degrees displacement from the plane defined by the observer and first step is $\left(\frac{\theta}{180}\right)^{N}$. For illustration purposes only, requiring a series of 10 steps to be straight -- and macros should have much more than that -- and adopting a significantly inflated upper bound of 10 degrees, the probability that a 10-step section of lightning is straight purely by chance is $2.8 \times 10^{-13}$. Again, we have underestimated the number of steps, N, and overestimated the maximum allowed degrees of displacement. This accords with observations that straight lightning is very rare and requires no special techniques to detect.}
+        \vtwo{Assuming each step in the stepped-leader process has a random azimuthal angle, the probability that for every one of N steps the direction is within $\theta$ degrees displacement from the plane defined by the observer and first step is $\left(\frac{\theta}{180}\right)^{N}$. For illustration purposes only, \vfour{consider a series of 10 steps  -- and macro-induced lightning should be much longer than that -- in which the maximum step-to-step deviation from a straight path is 10 degrees -- easily observed and much larger than what is expected for macros.}
+        The probability that \vfour{this} 10-step section of lightning is ``straight'' purely by chance is $3 \times 10^{-13}$. Again, we have underestimated the number of steps, N, and overestimated the maximum allowed degrees of displacement. This accords with observations that straight lightning is very rare and requires no special techniques to detect.}
         
     % subsection why_lightning_is_jagged (end)
 
@@ -197,7 +203,7 @@ Cleveland, Ohio 44106-7079, USA}
 
     In most artificially triggered lightning experiments, such as those at the International Center for Lightning Research and Testing (ICLRT) \vtwo{\citep{Hill2012, Hill2013}}, a rocket trailing a grounded triggering wire is launched when the quasi-static electric field at ground exceeds $E_{threshold} = 5\,$kV m$^{-1}$ and the flash rate becomes relatively low. In about half of all such launches, an initial stage is successfully triggered, consisting of a sustained upward positive leader typically several kilometers in length followed by an initial continuous current. Often, the initial stage is followed by one or more leader/return stroke sequences, similar to subsequent strokes in natural lightning \vtwo{\citep{Wang1999, rocket2012}}. 
 
-    The formation of a lightning strike caused by the passage of a macro through the atmosphere is dependent on the formation of a plasma trail produced by the macro scattering elastically off the atoms and molecules. This trail would serve as the channel through which the charge is transferred in a lightning strike. The plasma trails produced by the macro are similar to the trailing grounded wires as both are sources of free electrons.
+    The formation of a lightning strike caused by the passage of a macro through the atmosphere is dependent on the formation of a plasma trail produced by the macro scattering elastically off the atoms and molecules. This trail would \vfour{``lock in" the lightning-leaders, which serve} as the channel through which the charge is transferred in a lightning strike. The plasma trails produced by the macro are similar to the trailing grounded wires as both are sources of free electrons.
 
     We describe in this section the conditions under which a macro produces a sufficiently large and long-lived plasma channel. We then identify the the ways in which macro-induced lightning differs from natural lightning, in particular in being extremely straight, and so can be used as a signature to search for macros. Finally we discuss the one photographically documented straight lightning bolt.
 
@@ -228,14 +234,14 @@ Cleveland, Ohio 44106-7079, USA}
         It then shrinks back to $0$ at $t_I^0=e~t_{I}^{\rm max}$.
         
         \vtwo{
-        It is important to note that $A^{\rm max}$ is independent of $\alpha$. Turbulent mixing and expansion cooling will change the value of $\alpha$, and change the precise temperature profile \eqref{eq:temperature_field}, but will not change the maximum number of ionized atoms per unit length along the macro trajectory. They could in principal cool the plasma too quickly to allow leader formation along the channel. This will be considered in the next subsection.
+        It is important to note that $A^{\rm max}$ is independent of $\alpha$. Turbulent mixing and expansion cooling will change the value of $\alpha$, and change the precise temperature profile \eqref{eq:temperature_field}, but will not change the maximum number of ionized atoms per unit length along the macro trajectory. They could in principal cool the plasma too quickly to allow leader formation along the channel. This will be considered in the following subsections.
 
         Radiative cooling could have more deleterious effects by removing the energy in the plasma to a distant location, too far to participate in the leader initiation. However, in \vtwo{\citet{Sidhu2018auv}} we show that the effects of radiative cooling are negligible for $\sigma \lesssim 3\times 10^{-3}{\rm cm}^2$. For larger $\sigma$, the linear charge density in the macro channel saturates.
         }
 
     % subsection macro_induced_plasma_channels (end)
 
-    \subsection{Inducing Lightning} % (fold)
+    \subsection{Inducing Lightning \vfour{Leaders}} % (fold)
     \label{sub:inducing_lightning} 
 
         In order to initiate lightning, we need to create charged filaments with linear charged densities sufficient to seed a leader. In natural lightning, the leaders have \citep[][p. 152]{DwyerUman2014} a linear electron density $\lambda_e^{\rm natural}\simeq 6\times 10^{13} cm^{-1}$. By comparison, within the plasma channel at time $t_I^{\rm max}$ the linear free-electron density will be
@@ -254,9 +260,10 @@ Cleveland, Ohio 44106-7079, USA}
             \quad \implies \quad \sigma_x > 10^{-8}cm^2 \,.
         \end{equation}
         
-        \vtwo{Equations \eqref{eq:tI0min} was calculated using the diffusive cooling of \eqref{eq:temperature_field}, but turbulent mixing is known to be the most effective cooling mechanism. Crucially, however, turbulent mixing acts only on timescales of $300\mu{s}$ \vtwo{\citep{Picone1983}}, which is much longer than $1\mu{s}$.}
-
-        \vtwo{Equation \eqref{eq:tI0min} is more stringent than \eqref{eq:lambdaemin}; however, $1\mu{s}$ is an upper bound for the time-scale over which each step leader forms, and represents propagation along the step leader at approximately $0.05c$.} Positive return strokes travel \vtwo{\citep{Idone1987}} at $c/3$, which may be a more realistic estimate of the propagation speed. This would drop the minimum applicable $\sigma_x$ to $10^{-8}cm^2$. Nevertheless we quote our accessible macro parameter space using the more restrictive $\sigma_x \geq 6\times 10^{-8}cm^2$.
+        \vfour{\vtwo{Equation \eqref{eq:tI0min} is more stringent than \eqref{eq:lambdaemin}; however, $1\mu{s}$ is an upper bound for the time-scale over which each step leader forms, and represents propagation along the step leader at approximately $0.05c$.} Positive return strokes travel \vtwo{\citep{Idone1987}} at $c/3$, which may be a more realistic estimate of the propagation speed. This would drop the minimum applicable $\sigma_x$ to $10^{-8}cm^2$. Nevertheless we quote our accessible macro parameter space using the more restrictive $\sigma_x \geq 6\times 10^{-8}cm^2$.}
+        
+        \vtwo{Equations \eqref{eq:tI0min} was calculated using the diffusive cooling of \eqref{eq:temperature_field}, but turbulent mixing is known to be \vfour{a more} effective cooling mechanism. \vfour{Likewise, the expansion cooling will strongly cool the macro channel, impacting $\alpha$ in \eqref{eq:cooling_time}. In order to induce a leader, the plasma channel needs to exist long enough for a leader to connect to the macro's plasma channel. Considering the average speed of a lightning leader, this might appear to be a problem. In ordinary lightning the \textit{inter}-step pauses are long; these dominate the propagation time and lower the average propagation speed of the leader. However, this is the wrong timescale to consider. Leaders require these long inter-step intervals because there is not already a highly-ionized channel to follow. As reference, \citeauthor{Betts2003} \citep{Betts2003} uses a 0.2mm copper wire to induce leader formation. Our values of $\sigma$ yield macro channels with at least 5000 times greater linear charge density (see \ref{sub:staying_straight}). Given this highly-ionized channel, the leaders can propagate at the \textit{intra}-step velocity, which is approximately $c/3$, for which the relevant time step is $1 \mu s$.}
+        Turbulent mixing acts only on timescales of $300\mu{s}$ \vtwo{\citep{Picone1983}}, which is much longer than \vfour{the $1\mu{s}$ required.} Other cooling mechanisms are similarly unimportant.}
 
     % subsection inducing_lightning (end)
 
@@ -279,7 +286,7 @@ Cleveland, Ohio 44106-7079, USA}
     \subsection{Signatures of Macro-induced Lightning} % (fold)
     \label{sec:signatures_of_macro_induced_lightning}
 
-        Our macro-induced lightning initiation model differs from \vtwo{\citet{DwyerUman2014}} in a few important regards. First, as the macro trail acts as a ``pre-leader", the channel process is not stochastic but deterministic. Second, since the macro constantly creates the plasma channel the leader propagates continuously along this channel. The mode of the macro velocity distribution, 250 km/s, is near exactly the propagation velocity of the leaders ($200\,$ km s$^{-1}$), when including the \vtwo{interstep} interval. However, the propagation of the leader within each step is known to take at most $1\mu$s, and therefore to be at a velocity of at least $10^4\,$ km s$^{-1}$, and may perhaps be as much as the $c/3$ measured for positive return strokes. So as the macro continuously creates a plasma trail the leader will propagate at this same velocity. Thus in macro-induced lightning leaders are continuous, not discrete.
+        Our macro-induced lightning initiation model differs from \vtwo{\citet{DwyerUman2014}} in a few important regards. \vfour{Let us review the differences thus far}. First, as the macro trail acts as a ``pre-leader", the \vfour{leader-creation} process is not stochastic but deterministic\vfour{, with normal lightning leaders ``locking in" along the macro channel}. Second, since the macro constantly creates the plasma channel the leader propagates continuously along this channel. The mode of the macro velocity distribution, 250 km/s, is near exactly the propagation velocity of the leaders ($200\,$ km s$^{-1}$), when including the \vtwo{interstep} interval. However, the propagation of the leader within each step is known to take at most $1\mu$s, and therefore to be at a velocity of at least $10^4\,$ km s$^{-1}$, and may perhaps be as much as the $c/3$ measured for positive return strokes. So as the macro continuously creates a plasma trail the leader will propagate at this same velocity. Thus in macro-induced lightning leaders are continuous, not discrete.
 
         \begin{figure}[ht]
             \centering
@@ -322,8 +329,10 @@ Cleveland, Ohio 44106-7079, USA}
         In laboratory tests to simulate the IVY-MIKE lightning, laser-guided electric discharges were used to create a ${\sim 1}$ m straight plasma filament, radius $R_f\lesssim 1$ cm, within a reduced density channel, radius $R_d \lesssim 2$ cm \citep[][fig. 6]{IVY-MIKE1987}. On timescales exceeding $40 \, \mu s$, the $m=1$ magnetohydrodynamic (MHD) mode kinks the central filament, with perturbations of amplitude $R_e$ ($R_f < R_e < R_d$) and growing wavelength $\lambda$. $R_f$,\, $R_e$ and $R_d$ grow sub-linearly \citep[][fig. 9]{IVY-MIKE1987}. Extrapolating to 20 ms (ground-to-cloud time), the radius of the reduced density channel is $R_d<3m$. After 1 ms, the central filament kink radius $R_e$ has nearly plateaued at 10 cm, while the filament $R_f$ itself is stable at 1-2 cm. The $m=1$ mode wavelength is $\lambda\simeq4 m$. These lab-measurements of $R_d$ are consistent with observed lightning. While the amplitude and wavelength of the kink mode explain why it has yet to be observed. The $m=1$ instability should not alter the apparently straight lightning path, which is observed as the reduced density channel.
 
         Wind shear is not expected to introduce significant long wavelength deviations from straightness. The typical timescale of cloud-to-ground ion channel formation is ${\approx 20}$ ms. The return stroke, aka the first lightning strike \vtwo{\citep{DwyerUman2014}} occurs directly following the ion channel creation and propagates at $c/3$ \vtwo{\citep{Idone1987}}. At a wind speed of ${\approx 20}$ m/s \vtwo{\citep{Choi2004}}, high for the typical thunderstorm, local regions of the plasma channel can be transported by ${\sim 0.5}$ m. Even if wind shear transports neighboring plasma channel components in opposite directions, the observed deviation from a straight strike is just $1$m. Repeated strikes are generally separated by ${\sim 50}$ ms, contributing a further ${\sim 2}$ m deviation of the channel. In actuality, repeated strokes can be distinguished by any camera with $>30$ fps. These effects should not contribute significantly on the first strike and a macro-induced lightning track is predicted to be nearly perfectly straight.
+        
+        \vfour{There is one further effect to consider: whether the leader will break out from the macro channel. For instance, in triggered lightning experiments where a conducting wire is sent up to charge clouds, the discharge largely follows the wire, but consistently breaks away at some point. Typically, these conducting wires are made of copper, which has a conduction-electron density of $\simeq 4 \times 10^{13} cm^{-3}$. We have required the macro channels to have a linear free-electron density $\lambda_e^{macro} \geq \lambda_e^{natural} \simeq 6 \times 10^{13} cm^{-1}$. Those channels have a maximum radius of 1-2 cm. Therefore the channels have conduction-electron densities greater than or comparable to copper. More importantly the linear electron conduction-density is \textit{much} greater than the wires that are used in induced lightning experiments. For example, \citeauthor{Betts2003} \citep{Betts2003} used 0.2mm copper wire, with $\lambda\simeq 10^{10} cm^{-1}$. This is at least 5000 times less than a macro channel. Breakout is much less likely.}
 
-        \vtwo{Considering the $m=1$ instability and wind shear, deviations from straightness by even 1 reduced density channel width at any point along the channel path disqualifies a lightning event as a macro-induced event candidate. Considering the probabilities associated with naturally straight lightning -- section \ref{sub:why_lightning_is_jagged} -- any extremely straight lightning seems an excellent candidate for further analysis.}
+        \vtwo{Considering the $m=1$ instability, wind shear, and breakout probability, deviations from straightness by even 1 reduced density channel width at any point along the channel path disqualifies a lightning event as a macro-induced event candidate. Considering the probabilities associated with naturally straight lightning -- section \ref{sub:why_lightning_is_jagged} -- any extremely straight lightning seems an excellent candidate for further analysis.}
 
     % subsection staying_straight (end)
 
@@ -375,7 +384,7 @@ Cleveland, Ohio 44106-7079, USA}
 
         With these assumptions, and should we observe 0 very straight lightning strikes in \vtwo{two} years, we could place an upper bound on the mass of a macro up to $M_x \sim 10^6\,$g for $\sigma_x\gtrapprox6\times10^{-8}{\rm cm}^2$. The exact projections are shown in Figure 2. It is of particular significance that this method is sensitive to probing the nuclear density line.
         
-        We calculate these \vtwo{potential} constraints with the simplification of a gravitational infall velocity determined only by the mass of the sun and Earth, not accounting for the Earth's orbital velocity. This only noticeably affects the small lower right plateau in the constraint curve of \ref{fig:constraints}, which is determined by this velocity.
+        We calculate these \vtwo{potential} constraints with the simplification of a gravitational infall velocity determined only by the mass of the Sun and Earth, not accounting for the Earth's orbital velocity. This only noticeably affects the small lower right plateau in the constraint curve of \ref{fig:constraints}, which is determined by this velocity.
 
         To achieve these constraints requires more detailed observations / reporting of lightning as a significant fraction of lightning is not observed, and only a fraction of those events are recorded. Fortunately, lightning strikes are heavily concentrated over land \vtwo{\citep{Christian2003}}, increasing the possibility of establishing a dedicated monitoring program. It also increases the probability of reporting by casual observers, since nearly straight lightning strikes are rare enough to generate press (see \vtwo{\citet{Zimbabwe}}).
 
