--- a/references.bib
+++ b/references.bib
@@ -45,7 +45,18 @@
 }
 
 
-@ARTICLE{Bovy2012,
+ @misc{Betts2003,
+        title = { Lightning rocket },
+       author = {Betts, Robert},
+          url = {https://patents.google.com/patent/US6597559B2/en},
+         year = {2003},
+        month = {Jul},
+    publisher = {Google Patents},
+         note = {{US Patent 6597559B2}}
+} 
+
+
+ @ARTICLE{Bovy2012,
           doi = {10.1088/0004-637x/756/1/89},
           url = {https://doi.org/10.1088/0004-637x/756/1/89},
          year = {2012},
@@ -236,7 +247,7 @@ archivePrefix = "arXiv",
 
 
 @ARTICLE{Hare2020,
-       author = {{Hare}, B.~M. {et al}},
+       author = {{Hare}, B.~M., {et al}},
         title = "{Radio Emission Reveals Inner Meter-Scale Structure of Negative Lightning Leader Steps}",
       journal = {Physical Review Letters},
      keywords = {Physics - Atmospheric and Oceanic Physics, Astrophysics - Instrumentation and Methods for Astrophysics},
