--- a/macro_paperNotes.bib
+++ b/macro_paperNotes.bib
@@ -1,1 +1,1 @@
-@FOOTNOTE{Note1,key="Note1",note=" This is the distribution of macro velocities in a non-orbiting frame moving with the Galaxy. When considering the velocity of macros impacting the atmosphere, \protect \textup  {\hbox {\mathsurround \z@ \protect \normalfont  (\ignorespaces \ref {eq:maxwellian}\unskip \@@italiccorr )}} is modified by the motion of the Sun and Earth in that frame, and by the Sun's and Earth's gravitational potential. We have taken into account these effects (as explained in {\protect \color  {black} \protect \citet  {Freese2013}}), except the negligible effect of Earth's gravitational potential. \par Recent hydrodynamical simulations of Milky Way-like galaxies including baryons, which have a non-negligible effect on the dark matter distribution in the Solar {\protect \color  {black} neighborhood} {\protect \color  {black} \protect \citep  {Tanabashi2018}} have been performed to determine the correctness of assuming a Maxwellian distribution. These simulations find that the velocity distributions are indeed close to Maxwellian. As discussed previously, macros are expected to move according to \protect \textup  {\hbox {\mathsurround \z@ \protect \normalfont  (\ignorespaces \ref {eq:maxwellian}\unskip \@@italiccorr )}}. Taking this minimum speed requirement into account, we find that $71\%$ of all macros in the distribution will be moving at at least $250\protect \tmspace  +\thinmuskip {.1667em}$km/s. "}
+@FOOTNOTE{Note1,key="Note1",note=" This is the distribution of macro velocities in a non-orbiting frame moving with the Galaxy. When considering the velocity of macros impacting the atmosphere, \protect \textup  {\hbox {\mathsurround \z@ \protect \normalfont  (\ignorespaces \ref {eq:maxwellian}\unskip \@@italiccorr )}} is modified by the motion of the Sun and Earth in that frame, and by the Sun's and Earth's gravitational potential. We have taken into account these effects (as explained in \protect \citet  {Freese2013}), except the negligible effect of Earth's gravitational potential. \par Recent hydrodynamical simulations of Milky Way-like galaxies including baryons, which have a non-negligible effect on the dark matter distribution in the Solar neighborhood \protect \citep  {Tanabashi2018} have been performed to determine the correctness of assuming a Maxwellian distribution. These simulations find that the velocity distributions are indeed close to Maxwellian. As discussed previously, macros are expected to move according to \protect \textup  {\hbox {\mathsurround \z@ \protect \normalfont  (\ignorespaces \ref {eq:maxwellian}\unskip \@@italiccorr )}}. Taking this minimum speed requirement into account, we find that $71\%$ of all macros in the distribution will be moving at at least $250\protect \tmspace  +\thinmuskip {.1667em}$km/s. "}
