--- a/macro_paper.tex
+++ b/macro_paper.tex
@@ -53,8 +53,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Implementing Package Settings
 
-\graphicspath{{figures/}{../figures/}}
-
 \begin{document}
 
 % -----------------------------------------------------------------------------
@@ -74,7 +72,7 @@
 \affiliation{Physics Department/CERCA/ISO Case Western Reserve University
 Cleveland, Ohio 44106-7079, USA}
 
-\date{\today}
+\date{\today \quad Accepted: February 19, 2021}
 
 \preprint{APS/123-QED}
 
@@ -252,7 +250,7 @@ Cleveland, Ohio 44106-7079, USA}
 
         \begin{figure}[ht]
             \centering
-            \includegraphics[width=\linewidth]{macro_schematic/macro_schematic.pdf}
+            \includegraphics[width=\linewidth]{macro_schematic.pdf}
             \caption{\textit{(Not to scale)} Graphic representation of macro plasma channel seeding continuous leader. Channel direction can also be from ground to cloud. Macro plasma trail expands to maximum area $A^{\rm{max}}$ before cooling. As $v_{\rm{step}} < v_{\rm{macro}} < v_{\rm{leader}}$, the lightning-leader takes no ``steps", instead propagating continuously with the macro trail.}
             \label{fig:macro_graphic}
         \end{figure}
@@ -370,7 +368,7 @@ Cleveland, Ohio 44106-7079, USA}
 % -----------------------------------------------------------------------------
 
 \begin{figure*}
-    \includegraphics[width=\textwidth]{lightning_constraints/lightningconstraints.pdf}
+    \includegraphics[width=\textwidth]{lightningconstraints.pdf}
     \caption{
         Figure 1 of \citep{Sidhu2020reconsider} with the updated potential constraints discussed in the text. Earth lightning projections are in black hatching and Jupiter lightning projections are in cyan hatching. The lower right right constraint curves up because the number density of macros decreases with increased mass which requires a larger fraction of the velocity distribution. The step in the lower right is the average observed minimum macro velocity due to gravitational infall.
         \\
